--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h1>Hello Bangladesh</h1>
+
     <!-- JS links here -->
     <script src="./src/js/vendor/bootstrap.bundle.min.js"></script>
     <script src="./src/js/vendor/jquery-3.7.1.min.js"></script>
